# FerrumQ

./: Cargo.toml  cbindgen.toml  pyproject.toml
src/: lib.rs  units.rs
src/cuda/: cufft.cu  cufft.h
src/learn_rust/: guessing_game.rs
src/start/: hello.rs
